// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plate should handle "data-testid" prop 1`] = `
<div>
  <div
    class="root test-class shadow-z3 rounds-md__all"
    data-testid="test-plate"
  >
    Test
  </div>
</div>
`;

exports[`Plate should handle props 1`] = `
<div>
  <div
    class="root test-class shadow-z3 rounds-md__all"
    data-testid="plate"
  >
    Test
  </div>
</div>
`;

exports[`Plate should renders with small rounds 1`] = `
<div>
  <div
    class="root shadow-z1 rounds-sm__all"
    data-testid="plate"
  >
    Test
  </div>
</div>
`;

exports[`Plate should renders without props 1`] = `
<div>
  <div
    class="root shadow-z1 rounds-sm__all"
    data-testid="plate"
  />
</div>
`;
